--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
-    "firebase-admin": "^13.4.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "firebase-admin": "^13.4.0"
   },
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--max_old_space_size=4096 react-scripts start",
@@ -45,8 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3"
   }
 }
