Player STEP1~6 Complete_6

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,4 @@
-# /netlify.toml
-# 선택(옵션). 경고가 남아도 배포를 막지 않게 하려면 사용
+# /netlify.toml  (기존 내용 유지)
 [build]
   command = "CI=false npm run build"
   publish = "build"
@@ -7,3 +6,9 @@
 [build.environment]
   CI = "false"
   EXTEND_ESLINT = "true"
+
+# 👇 SPA 라우팅 보강: 모든 경로를 index.html로 전달
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
