--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "agm-admin-functions",
+  "name": "functions",
+  "private": true,
   "engines": { "node": "18" },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "^4.4.0"
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^4.4.1"
   }
 }
