chore: ignore service-account.json (UTF-8 + rules)

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-# 빌드 폴더
+# 빌드/의존성
 build/
-# 의존성 폴더
 node_modules/
-# Firebase 관리자 SDK 파일 (민감 정보)
+
+# Firebase 관리자 SDK 파일(민감 정보)
+service-account.json
+**/service-account.json
+*.service-account.json
 agm-golf-manager-firebase-adminsdk-*.json
+
 # 환경 설정 파일
-.env*
+.env
+.env.*
