--- a/public/manifest-player.json
+++ b/public/manifest-player.json
@@ -2,16 +2,13 @@
   "id": "/agm-player",
   "name": "AGM 참가자",
   "short_name": "AGM 참가자",
-  "start_url": "/install-player.html",
+  "start_url": "/player/events?entry=player",
   "scope": "/",
   "display": "standalone",
   "background_color": "#0b1320",
   "theme_color": "#0b1320",
   "icons": [
-    {
-      "src": "/favicon.ico",
-      "sizes": "any",
-      "type": "image/x-icon"
-    }
+    { "src": "/logo192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/logo512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
